--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ seed2.ts
 postgreSQL_Comm.txt
 Git_Reset.txt
 Postgres_Permission.txt
+vite.config2.ts
+Users1.tsx
 # ---- OS / Editor junk ----
 .DS_Store
 Thumbs.db
