--- a/pms-backend/package.json
+++ b/pms-backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "@types/passport-jwt": "^4.0.1",
     "prisma": "^5.22.0",
