--- a/pms-frontend/package.json
+++ b/pms-frontend/package.json
@@ -19,12 +19,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.4.5",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.2",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9"
-   
-    
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.4.5",
+    "vite": "^7.2.6"
   }
 }
