--- a/pms-backend/package.json
+++ b/pms-backend/package.json
@@ -18,6 +18,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
     "@prisma/client": "^5.22.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -25,7 +26,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "serve-static": "^2.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -34,6 +36,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "@types/passport-jwt": "^4.0.1",
+    "@types/serve-static": "^2.2.0",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
