Changed the localhost URLs to IP

--- a/pms-backend/.env
+++ b/pms-backend/.env
@@ -8,7 +8,7 @@ DATABASE_URL="postgresql://postgres:2024@localhost:5432/pms?schema=public"
 # DIRECT_URL="postgresql://pms:pms@127.0.0.1:5432/pms?schema=public&sslmode=disable"
 
 PORT=3000
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://34.236.185.127:5173
 JWT_SECRET=devsecret
 
 # === Toggle targeted actor/audit debug logs, To turn off, set to 0 ===
