--- a/pms-backend/.env
+++ b/pms-backend/.env
@@ -7,9 +7,14 @@ DATABASE_URL="postgresql://postgres:2024@localhost:5432/pms?schema=public"
 #DATABASE_URL="postgresql://pms:pms@127.0.0.1:5432/pms?schema=public&sslmode=disable"
 # DIRECT_URL="postgresql://pms:pms@127.0.0.1:5432/pms?schema=public&sslmode=disable"
 
-PORT=3000
-CORS_ORIGIN=http://34.236.185.127:5173
+PORT=3001
+CORS_ORIGIN=http://34.236.185.127:3000
 JWT_SECRET=devsecret
 
 # === Toggle targeted actor/audit debug logs, To turn off, set to 0 ===
 AUDIT_DEBUG=1
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
